feat(server): getLiked getMatched getSenderNotif
